# finedata-mcp

./: .gitignore  LICENSE  README.md  __init__.py  package.json  pyproject.toml  requirements.txt  tools.py
mcp-package/: README.md  index.js  package.json
mcp_server/: __init__.py  client.py  config.py  tools.py
src/mcp_server/: __init__.py  __main__.py  client.py  server.py
