[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finedata-mcp"
version = "0.1.6"
description = "MCP Server for FineData web scraping API - enables AI agents to scrape any website"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FineData", email = "support@finedata.ai" }
]
maintainers = [
    { name = "FineData", email = "support@finedata.ai" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "finedata",
    "web-scraping",
    "ai-agents",
    "claude",
    "cursor",
    "antibot",
    "captcha-solving",
    "playwright"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://finedata.ai"
Documentation = "https://docs.finedata.ai"
Repository = "https://github.com/quality-network/finedata-mcp"
Issues = "https://github.com/quality-network/finedata-mcp/issues"
Changelog = "https://github.com/quality-network/finedata-mcp/releases"

[project.scripts]
finedata-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_server/**/*.py",
    "README.md",
    "LICENSE",
]
